# ChatBridge

./: .env_example  .gitignore  .gitmodules  Dockerfile  README.md  gpt4vnet2api.py  pyproject.toml  retool2api.py  sophnet2api.py  tenbin2api.py
.github/workflows/: build-and-push.yml
src/chatbridge/: chatbridge.py
src/gmailgenerate/: __init__.py  gmailgenerate.py
src/prompt/: prompt.py
