[project]
name = "retool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "curl-cffi>=0.12.0",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "fastapi-wraps>=0.0.1",
    "langchain-core>=0.3.68",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-openai>=0.3.28",
    "langgraph>=0.5.3",
    "lxml>=6.0.0",
    "pydantic>=2.11.7",
    "uvicorn>=0.35.0",
    "websocket-client>=1.8.0",
]
